--- a/resources/styles/custom.css
+++ b/resources/styles/custom.css
@@ -57,3 +57,9 @@ code.language-c::before {
 code.language-h::before {
     content: "h";
 }
+code.language-sh::before {
+    content: "shell";
+}
+code.language-json::before {
+    content: "JSON";
+}
